--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -168,7 +168,7 @@
     </div>
 </div>
 
-<!-- Related Recipes Section -->
+{% comment %} <!-- Related Recipes Section -->
 <div class="row mt-5">
     <div class="col-12">
         <h3 class="mb-4 text-center animate__animated animate__fadeIn">
@@ -203,7 +203,7 @@
             {% endfor %}
         </div>
     </div>
-</div>
+</div> {% endcomment %}
 {% endblock %}
 
 {% block extra_css %}
